# AED-project

./: .gitignore  BST.cpp  BST.h  CMakeLists.txt  Class.cpp  Class.h  Lecture.cpp  Lecture.h  README.md  Schedule.cpp  Schedule.h  ScheduleManager.cpp  ScheduleManager.h  Student.cpp  Student.h  UC.cpp  UC.h  data_structs&functions.h  functions.cpp  functions.h  main.cpp
data-given/: classes.csv  classes_per_uc.csv  students_classes.csv
docs/: Doxyfile
docs/output/html/: _b_s_t_8cpp.html  _b_s_t_8h.html  _b_s_t_8h_source.html  _class_8cpp.html  _class_8h.html  _class_8h_source.html  _lecture_8cpp.html  _lecture_8h.html  _lecture_8h_source.html  _r_e_a_d_m_e_8md.html  _schedule_8cpp.html  _schedule_8h.html  _schedule_8h_source.html  _schedule_manager_8cpp.html  _schedule_manager_8h.html  _schedule_manager_8h_source.html  _student_8cpp.html  _student_8h.html  _student_8h_source.html  _u_c_8cpp.html  _u_c_8h.html  _u_c_8h_source.html  annotated.html  class_b_s_t-members.html  class_b_s_t.html  class_class-members.html  class_class.html  class_lecture-members.html  class_lecture.html  class_schedule-members.html  class_schedule.html  class_schedule_manager-members.html  class_schedule_manager.html  class_student-members.html  class_student.html  class_u_c-members.html  class_u_c.html  classes.html  files.html  functions.html  (+12 more)
docs/output/latex/: _b_s_t_8cpp.tex  _b_s_t_8h.tex  _b_s_t_8h_source.tex  _class_8cpp.tex  _class_8h.tex  _class_8h_source.tex  _lecture_8cpp.tex  _lecture_8h.tex  _lecture_8h_source.tex  _r_e_a_d_m_e_8md.tex  _schedule_8cpp.tex  _schedule_8h.tex  (+25 more)
(+42 files in other folders)
